--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "color": "^0.7.3",
     "hapi": "^8.2.0",
+    "hapi-auth-basic": "^2.0.0",
     "hapi-auth-cookie": "^2.0.0",
     "pg": "^4.3.0",
     "pg-hstore": "^2.3.1",
